--- a/app/views/calendar/view.html.erb
+++ b/app/views/calendar/view.html.erb
@@ -38,7 +38,7 @@
 										<span><%= e.starttime.strftime('%l:%M %p') %></span> TO:
 										<span><%= e.enddate.strftime('%b %e, %Y') %></span>
 										<span><%= e.endtime.strftime('%l:%M %p') %></span>
-                    <span class="new-block" id="expand-info">...</span>
+                    <span class="button-block standard-block" id="expand-info">...</span>
 						        <br></p>
 									</div>
 									<div class="linfo-block" id="<%= e.team1+"_expanded" %>">
