--- a/app/assets/stylesheets/calendar.scss
+++ b/app/assets/stylesheets/calendar.scss
@@ -9,7 +9,7 @@
   float: left;
 
   width: 75%;
-  height: 100%;
+  height: calc(100% - 47px);
 }
 .calendar-row{
   display: table-row;
@@ -52,6 +52,7 @@
 
 .month{
   font-size: 36px;
+  height: 47px;
 }
 
 .not-month {
@@ -81,8 +82,6 @@
 
 .events_block{
   display: block;
-  border: 1px solid #DBDBDB;
-  border-radius: 5px;
 
   background: white;
 
@@ -90,7 +89,7 @@
   color: black;
 
   width: auto;
-  height: 96.5%;
+  height: calc(100% - 71px);
   padding: 12px;
 
   overflow-y: auto;
