--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -8,7 +8,6 @@
 .float-container{
   background: rgba(255,255,255,0.5);
   border-radius: 20px;
-  margin: 0 auto;
   text-align: center;
   width: 50%;
   min-width: 250px;
@@ -18,7 +17,7 @@
 }
 
 .full-form{
-  width: 100%;
+  width: calc(100% - 20px);
   font-size: 24px;
 }
 
@@ -38,7 +37,7 @@
   text-align: center;
 
   min-width: 250px;
-  padding: 30px 0px 30px 0px;
+  padding: 30px;
 
   font-size: 36px;
 }
@@ -51,6 +50,7 @@
 }
 
 #float-form-input{
+  background: transparent;
   border-style: none;
   border-width: thin;
   border-bottom-style: solid;
