--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -1,4 +1,5 @@
 html, body {
+    line-height: 2em;
     max-width: 100%;
     height: 100%;
     width: 100%;
@@ -6,18 +7,21 @@ html, body {
 	  padding: 0px;
     overflow-x: hidden;
 }
+.center{ margin: 0 auto; }
 
 .left-title{
-  position: fixed;
+  position: absolute;
   left: 5%;
-  top: 9%;
-  color: white;
+  top: 14%;
+  color: #E6E6E6;
 }
+
+.d-lineh{ line-height: normal; }
 
 .parting-block{
   border-bottom: 50px solid white;
-  //border-left: solid rgba(255,255,255,0);
-  //border-left-width: 1366px;
+  border-left: solid rgba(255,255,255,0);
+  border-left-width: 1366px;
   height: 0;
   width: 100%;
 }
@@ -68,10 +72,14 @@ a, a:visited{
 div.maincontainer{
   background: white;
 	position: absolute;
-  height: calc(100% - 134px);
+  height: calc(100% - 218px);
 	width: 100%;
 }
+div.content{
+  display: none;
+}
 div.subcontainer{
+  display: none;
 	width: auto;
   height: 80%;
   max-height: 80%;
