--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,16 +1,17 @@
-<body>
+<body id="landing">
 		<%= render 'layouts/header' %>
-		<div class="maincontainer">
 			<%= flash[:error] %>
 			<% if logged_in? %>
-			<div class="subcontainer">
-				<h2>Account Details:</h2>
-        <table>
-          <tr><th>Username:</th><td><%= @account.username %></td>
-          <tr><th>Email:</th><td><%= @account.email %></td>
-        </table>
+			<div class="parting-block"><h2 class="left-title">Account Details</h2></div>
+			<div class="maincontainer">
+				<div class="content">
+					<div class="subcontainer">
+						<h2>Account Details:</h2>
+	          Username: <%= @account.username %><br>
+	          Email: <%= @account.email %>
+					</div>
+				</div>
 			</div>
 			<% end %>
-		</div>
 </body>
 <%= yield -%>
