--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -31,6 +31,7 @@
 .standard-button:hover{ background: #19A3D1;}
 .danger-button{
   color: white;
+  float: right;
   background: #FF1919;
 }
 .danger-button:hover{ background: #CC1414;}
