--- a/app/views/calendar/calendar.js.erb
+++ b/app/views/calendar/calendar.js.erb
@@ -25,7 +25,7 @@ $("#events-rblock").html(" \
       <% else %> \
           <%= escape_javascript image_tag 'alarm.png', size:'16x16' %> Notifications are currently unavailable.<br> \
       <% end %> \
-      <% if !e.location.length.nil? %> \
+      <% if !e.location.blank? %> \
           <%= escape_javascript image_tag 'location.png', size:'16x16' %> <span class='editable lineinput' id='location'><%= e.location %></span><br> \
       <% else %> \
           <%= escape_javascript image_tag 'location.png', size:'16x16' %> <span class='editable lineinput' id='location'>Add a location</span><br> \
