--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -5,7 +5,7 @@
 				<div class="center_wrapper">
 					<%= content_tag :div, class: 'center float-container' do %>
 					<%= form_for @account do |a| %>
-							<%= a.text_field :username, placeholder: 'username', id: 'float-form-input' %><br>
+							<%= a.text_field :username, placeholder: 'Username', id: 'float-form-input' %><br>
 							<%= a.password_field :password, placeholder: 'Password', id: 'float-form-input' %><br>
 							<%= a.password_field :password_confirmation, placeholder: 'Retype password', id: 'float-form-input' %><br>
 							<%= a.email_field :email, placeholder: 'example@example.com', id: 'float-form-input' %><br>
