--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -1,6 +1,7 @@
 html, body {
     line-height: 2em;
     max-width: 100%;
+    max-height: 100%;
     height: 100%;
     width: 100%;
 	  margin: 0px;
@@ -81,7 +82,7 @@ div.content{
 div.subcontainer{
   display: none;
 	width: auto;
-  height: 80%;
+  height: calc(100% - 268px);
   max-height: 80%;
 	overflow: auto;
   padding: 50px 65px 50px 50px
