--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -76,7 +76,7 @@
   float: left;
   color: #818181;
 }
-.info-button:hover{ background: #19A3D1;}
+.info-button:hover{ background: #2A44AB;}
 
 .submit-button{
   color: white;
