--- a/app/assets/stylesheets/seasons.scss
+++ b/app/assets/stylesheets/seasons.scss
@@ -11,12 +11,13 @@
   color: black;
   padding: 12px;
 
-  width: calc(50% - 26px);
+  width: calc(50% - 56px);
   height: calc(100% - 26px);
 }
 
 #season-select{
   padding: 5px;
+  color: white;
   border-bottom: 1px solid #E6E6E6;
 
   height: 30px;
@@ -47,7 +48,7 @@
   color: black;
   padding: 12px;
 
-  width: calc(50% - 26px);
+  width: calc(50% - 56px);
   height: calc(100% - 26px);
 }
 
