--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -73,7 +73,8 @@ a, a:visited{
 div.maincontainer{
   background: white;
 	position: absolute;
-  height: calc(100% - 218px);
+  padding: 30px;
+  height: calc(100% - 278px);
 	width: 100%;
 }
 div.content{
