--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -9,6 +9,7 @@ div.center_wrapper{
 div.menublock {
 	display: inline-block;
 	line-height: normal;
+	color: white;
 	width:90%;
 	margin: 0 auto;
 }
