Calendar filter changes
- changed -all- filter to prevent event listing duplicates

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -79,7 +79,7 @@
   background: white;
   border-radius: 20px;
   border: solid 1px #E8E8E8;
-  box-shadow: 10px 10px 10px #E8E8E8;
+  box-shadow: 10px 10px 10px rgba(232,232,232,0.5);
 
   text-align: left;
 
