--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -6,7 +6,7 @@ div.center_wrapper{
 	height: 168px;
 	text-align: center;
 }
-div.menublock {
+nav.menublock {
 	display: inline-block;
 	line-height: normal;
 	color: white;
