--- a/app/views/seasons/details.js.erb
+++ b/app/views/seasons/details.js.erb
@@ -7,7 +7,7 @@ $("#reloadnewven").empty().append(" \
     <p> \
       <%= j text_field_tag 'venue[name]', nil, placeholder: 'Add a name', id: 'float-form-input', class: 'full-form' %> \
       <%= j text_field_tag 'venue[location]', nil, placeholder: 'Add an address', id: 'float-form-input', class: 'full-form' %> \
-      <%= j submit_tag 'Add Venue', class: 'standard-button submit-button' %> \
+      <%= j submit_tag 'Add Venue', class: 'button-main submit-button' %> \
     </p> \
     </div> \
   </div>");
